--- a/TourPlanner.csproj
+++ b/TourPlanner.csproj
@@ -55,7 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="MainWindow.xaml">
+    <Page Include="UILayer\Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -63,7 +63,10 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="MainWindow.xaml.cs">
+    <Compile Include="BusinessLayer\Models\Tour.cs" />
+    <Compile Include="BusinessLayer\Models\TourLogs.cs" />
+    <Compile Include="BusinessLayer\Models\User.cs" />
+    <Compile Include="UILayer\Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
@@ -95,12 +98,10 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="BusinessLayer\Models\" />
     <Folder Include="BusinessLayer\Services\" />
     <Folder Include="DataLayer\Database\" />
     <Folder Include="UILayer\Resources\" />
     <Folder Include="UILayer\ViewModels\" />
-    <Folder Include="UILayer\Views\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
