--- a/TourPlanner.csproj
+++ b/TourPlanner.csproj
@@ -55,12 +55,25 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="UILayer\ViewModels\CreateTourViewModel.cs" />
     <Compile Include="UILayer\ViewModels\TourListViewModel.cs" />
     <Compile Include="UILayer\Views\CreateTour.xaml.cs">
       <DependentUpon>CreateTour.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UILayer\Views\SearchBar.xaml.cs">
+      <DependentUpon>SearchBar.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UILayer\Views\TourListSubView.xaml.cs">
       <DependentUpon>TourListSubView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UILayer\Views\TourLogsManagement.xaml.cs">
+      <DependentUpon>TourLogsManagement.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UILayer\Views\TourManagement.xaml.cs">
+      <DependentUpon>TourManagement.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="UILayer\Views\TourNavbar.xaml.cs">
+      <DependentUpon>TourNavbar.xaml</DependentUpon>
     </Compile>
     <Page Include="UILayer\Views\CreateTour.xaml">
       <SubType>Designer</SubType>
@@ -86,7 +99,6 @@
     <Compile Include="UILayer\Commands\RelayCommand.cs" />
     <Compile Include="UILayer\ViewModels\MainWindowViewModel.cs" />
     <Compile Include="UILayer\ViewModels\TourLogViewModel.cs" />
-    <Compile Include="UILayer\ViewModels\TourViewModel.cs" />
     <Compile Include="UILayer\Views\CreateTourLog.xaml.cs">
       <DependentUpon>CreateTourLog.xaml</DependentUpon>
     </Compile>
@@ -94,7 +106,23 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="UILayer\Views\SearchBar.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="UILayer\Views\TourListSubView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UILayer\Views\TourLogsManagement.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UILayer\Views\TourManagement.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="UILayer\Views\TourNavbar.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -129,7 +157,7 @@
     <Folder Include="DataLayer\Database\" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="UILayer\Resources\Images\Background.jpeg" />
+    <Resource Include="UILayer\Resources\Images\Background.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
