--- a/TourPlanner.csproj
+++ b/TourPlanner.csproj
@@ -55,16 +55,21 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="UILayer\ViewModels\CreateTourLogViewModel.cs" />
     <Compile Include="UILayer\ViewModels\CreateTourViewModel.cs" />
+    <Compile Include="UILayer\ViewModels\SearchBarViewModel.cs" />
     <Compile Include="UILayer\ViewModels\TourListViewModel.cs" />
+    <Compile Include="UILayer\ViewModels\TourLogsManagementViewModel.cs" />
+    <Compile Include="UILayer\ViewModels\TourManagementViewModel.cs" />
+    <Compile Include="UILayer\ViewModels\TourNavbarViewModel.cs" />
     <Compile Include="UILayer\Views\CreateTour.xaml.cs">
       <DependentUpon>CreateTour.xaml</DependentUpon>
     </Compile>
     <Compile Include="UILayer\Views\SearchBar.xaml.cs">
       <DependentUpon>SearchBar.xaml</DependentUpon>
     </Compile>
-    <Compile Include="UILayer\Views\TourListSubView.xaml.cs">
-      <DependentUpon>TourListSubView.xaml</DependentUpon>
+    <Compile Include="UILayer\Views\TourList.xaml.cs">
+      <DependentUpon>TourList.xaml</DependentUpon>
     </Compile>
     <Compile Include="UILayer\Views\TourLogsManagement.xaml.cs">
       <DependentUpon>TourLogsManagement.xaml</DependentUpon>
@@ -98,7 +103,6 @@
     <Compile Include="BusinessLayer\Services\TourService.cs" />
     <Compile Include="UILayer\Commands\RelayCommand.cs" />
     <Compile Include="UILayer\ViewModels\MainWindowViewModel.cs" />
-    <Compile Include="UILayer\ViewModels\TourLogViewModel.cs" />
     <Compile Include="UILayer\Views\CreateTourLog.xaml.cs">
       <DependentUpon>CreateTourLog.xaml</DependentUpon>
     </Compile>
@@ -110,7 +114,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="UILayer\Views\TourListSubView.xaml">
+    <Page Include="UILayer\Views\TourList.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
