--- a/TourPlanner.csproj
+++ b/TourPlanner.csproj
@@ -70,6 +70,9 @@
     <Compile Include="UILayer\Views\Home.xaml.cs">
       <DependentUpon>Home.xaml</DependentUpon>
     </Compile>
+    <Compile Include="UILayer\Views\ReturnButton.xaml.cs">
+      <DependentUpon>ReturnButton.xaml</DependentUpon>
+    </Compile>
     <Compile Include="UILayer\Views\SearchBar.xaml.cs">
       <DependentUpon>SearchBar.xaml</DependentUpon>
     </Compile>
@@ -119,6 +122,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="UILayer\Views\ReturnButton.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="UILayer\Views\SearchBar.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
