changed some functionalities

--- a/TourPlanner.csproj
+++ b/TourPlanner.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="UILayer\Stores\TourStore.cs" />
     <Compile Include="UILayer\ViewModels\BaseViewModel.cs" />
     <Compile Include="UILayer\ViewModels\CreateTourLogViewModel.cs" />
     <Compile Include="UILayer\ViewModels\CreateTourViewModel.cs" />
