Aligned classes with EF and added DB Context

--- a/TourPlanner.csproj
+++ b/TourPlanner.csproj
@@ -18,8 +18,11 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="9.0.4" />
     <PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.4" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.4" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.NetTopologySuite" Version="9.0.4" />
     <PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
     <PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.0.0" />
   </ItemGroup>
@@ -34,7 +37,6 @@
     <Page Remove="UILayer\Views\TopNavbar.xaml" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="DataLayer\Data\" />
     <Folder Include="DataLayer\APIClients\" />
   </ItemGroup>
 </Project>
