--- a/TourPlanner.csproj
+++ b/TourPlanner.csproj
@@ -39,8 +39,14 @@
     <Compile Remove="TourPlanner.UILayer\ViewModels\CreateTourLogViewModel.cs" />
     <Compile Remove="TourPlanner.UILayer\ViewModels\EventAggregator.cs" />
     <Compile Remove="UILayer\Views\TopNavbar.xaml.cs" />
+    <None Remove="appsettings.json" />
     <None Remove="UILayer\Resources\Fonts\Montserrat-Medium.ttf" />
     <Page Remove="UILayer\Views\TopNavbar.xaml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="DataLayer\APIClients\" />
