Added logging with serilog

--- a/TourPlanner.UI/appsettings.json
+++ b/TourPlanner.UI/appsettings.json
@@ -9,8 +9,17 @@
   "Api": {
     "OpenRouteServiceKey": "INSERT_KEY_HERE"
   },
-  "Logging": {
-    
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File" ],
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": "Logs/TourPlanner-.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
   },
   "Paths": {
     "BaseDirectory": "D:\\Studium\\4. Semester\\Software Engineering 2\\Project\\TourPlanner"
