--- a/TourPlanner.UI/TourPlanner.UI.csproj
+++ b/TourPlanner.UI/TourPlanner.UI.csproj
@@ -33,6 +33,9 @@
 	<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.5" />
 	<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.5" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.5" />
+	<PackageReference Include="Serilog" Version="4.3.0" />
+	<PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
+	<PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
 	<PackageReference Include="System.Data.DataSetExtensions" Version="4.5.0" />
 	<PackageReference Include="System.Runtime.CompilerServices.Unsafe" Version="6.1.2" />
   </ItemGroup>
