Logging added to certain code parts

--- a/TourPlanner.UI/appsettings.json
+++ b/TourPlanner.UI/appsettings.json
@@ -10,13 +10,24 @@
     "OpenRouteServiceKey": "INSERT_KEY_HERE"
   },
   "Serilog": {
-    "Using": [ "Serilog.Sinks.File" ],
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
     "WriteTo": [
+      {
+        "Name": "Console"
+      },
       {
         "Name": "File",
         "Args": {
-          "path": "Logs/TourPlanner-.txt",
-          "rollingInterval": "Day"
+          "path": "Logs/TourPlannerLog-.txt",
+          "rollingInterval": "Day",
+          "formatter": "Serilog.Formatting.Json.JsonFormatter"
         }
       }
     ]
