--- a/TourPlanner.UI/TourPlanner.UI.csproj
+++ b/TourPlanner.UI/TourPlanner.UI.csproj
@@ -24,6 +24,7 @@
     <Resource Include="Resources\Fonts\Montserrat-Regular.ttf" />
   </ItemGroup>
   <ItemGroup>
+	<PackageReference Include="ClosedXML" Version="0.105.0" />
 	<PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="9.0.5" />
 	<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
 	<PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.5" />
