--- a/TourPlanner.BL/TourPlanner.BL.csproj
+++ b/TourPlanner.BL/TourPlanner.BL.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.105.0" />
+    <PackageReference Include="Serilog" Version="4.3.1-dev-02373" />
   </ItemGroup>
 
   <ItemGroup>
