--- a/TourPlanner.BL/TourPlanner.BL.csproj
+++ b/TourPlanner.BL/TourPlanner.BL.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.105.0" />
+    <PackageReference Include="itext7" Version="9.2.0" />
+    <PackageReference Include="itext7.bouncy-castle-adapter" Version="9.2.0" />
     <PackageReference Include="Serilog" Version="4.3.1-dev-02373" />
   </ItemGroup>
 
