Added Result type for most service classes

--- a/TourPlanner.UI/appsettings.json
+++ b/TourPlanner.UI/appsettings.json
@@ -1,10 +1,6 @@
 {
   "Database": {
-    "Host": "localhost",
-    "Port": 5432,
-    "Database": "TourPlanner",
-    "Username": "salma",
-    "Password": "tourPlanner1234"
+    "connectionString": "Host=localhost;Port=5432;Database=TourPlanner;Username=salma;Password=tourPlanner1234"
   },
   "Api": {
     "OpenRouteServiceKey": "INSERT_KEY_HERE"
