--- a/TourPlanner.UI/TourPlanner.UI.csproj
+++ b/TourPlanner.UI/TourPlanner.UI.csproj
@@ -34,7 +34,7 @@
 	<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.5" />
 	<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.5" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.5" />
-	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.5"/>
+	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.5" />
 	<PackageReference Include="Serilog" Version="4.3.1-dev-02373" />
 	<PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
 	<PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
@@ -46,6 +46,9 @@
     <ProjectReference Include="..\TourPlanner.BL\TourPlanner.BL.csproj" />
     <ProjectReference Include="..\TourPlanner.DAL\TourPlanner.DAL.csproj" />
     <ProjectReference Include="..\TourPlanner.Models\TourPlanner.Models.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\Icons\" />
   </ItemGroup>
 
 </Project>
