--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@
 # Mono auto generated files
 mono_crash.*
 
+# App settings excluded for now!
+appsettings.json
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
@@ -361,3 +364,4 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/TourPlanner.UI/appsettings.json
