--- a/TourPlanner.BL/TourPlanner.BL.csproj
+++ b/TourPlanner.BL/TourPlanner.BL.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="itext7" Version="9.2.0" />
     <PackageReference Include="itext7.bouncy-castle-adapter" Version="9.2.0" />
     <PackageReference Include="Serilog" Version="4.3.1-dev-02373" />
+	<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
