--- a/TourPlanner.UI/TourPlanner.UI.csproj
+++ b/TourPlanner.UI/TourPlanner.UI.csproj
@@ -36,6 +36,7 @@
 	<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.5" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="9.0.5" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.5" />
+	<PackageReference Include="Microsoft.Web.WebView2" Version="1.0.3296.44" />
 	<PackageReference Include="Serilog" Version="4.3.1-dev-02373" />
 	<PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
 	<PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
