--- a/TourPlanner.BL/TourPlanner.BL.csproj
+++ b/TourPlanner.BL/TourPlanner.BL.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="ClosedXML" Version="0.105.0" />
     <PackageReference Include="itext7" Version="9.2.0" />
     <PackageReference Include="itext7.bouncy-castle-adapter" Version="9.2.0" />
+    <PackageReference Include="Microsoft.Playwright" Version="1.53.0" />
     <PackageReference Include="Serilog" Version="4.3.1-dev-02373" />
 	<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
