Refactor tests for validation and services: improve assertions, update namespace imports, adjust method names, and modify `TourPlanner.Tests.csproj` to target `net8.0-windows7.0`.

--- a/TourPlanner.Tests/TourPlanner.Tests.csproj
+++ b/TourPlanner.Tests/TourPlanner.Tests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net8.0-windows7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
@@ -23,6 +23,7 @@
     <ProjectReference Include="..\TourPlanner.BL\TourPlanner.BL.csproj" />
     <ProjectReference Include="..\TourPlanner.Models\TourPlanner.Models.csproj" />
     <ProjectReference Include="..\TourPlanner.DAL\TourPlanner.DAL.csproj" />
+    <ProjectReference Include="..\TourPlanner.UI\TourPlanner.UI.csproj" />
   </ItemGroup>
 
 </Project>
