--- a/TourPlanner.BL/TourPlanner.BL.csproj
+++ b/TourPlanner.BL/TourPlanner.BL.csproj
@@ -1,23 +1,23 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net8.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="ClosedXML" Version="0.105.0" />
-    <PackageReference Include="itext7" Version="9.2.0" />
-    <PackageReference Include="itext7.bouncy-castle-adapter" Version="9.2.0" />
-    <PackageReference Include="QuestPDF" Version="2024.12.6" />
-    <PackageReference Include="Serilog" Version="4.3.1-dev-02373" />
-	<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="ClosedXML" Version="0.105.0" />
+		<PackageReference Include="itext7" Version="9.2.0" />
+		<PackageReference Include="itext7.bouncy-castle-adapter" Version="9.2.0" />
+		<PackageReference Include="Microsoft.Playwright" Version="1.53.0" />
+		<PackageReference Include="Serilog" Version="4.3.1-dev-02373" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\TourPlanner.DAL\TourPlanner.DAL.csproj" />
-    <ProjectReference Include="..\TourPlanner.Models\TourPlanner.Models.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\TourPlanner.DAL\TourPlanner.DAL.csproj" />
+		<ProjectReference Include="..\TourPlanner.Models\TourPlanner.Models.csproj" />
+	</ItemGroup>
 
 </Project>
